--- a/javascript.html
+++ b/javascript.html
@@ -13,7 +13,8 @@
     <body>
         <div class="language">
             <a href="index.html" target="_self">Html</a><br>
-            <a href="javascript.html" target="_self">Java Script</a>
+            <a href="javascript.html" target="_self">Java Script</a><br>
+            <a href="breakout.html" target="_blank">Breakout</a><br>
         </div>
         <div class="list_container">
             <p class="contents_title">เนื้อหา</p>
@@ -28,7 +29,9 @@
                 <a href="#js_oper">JS Operators </a><br>
                 <a href="#js_arith">JS Arithmetic</a><br>
                 <a href="#js_assignment">JS Assignment</a><br>
-                <a href="#js_datat">JS Data types</a>
+                <a href="#js_datat">JS Data types</a><br>
+                <a href="#js_function">JS Function</a><br>
+                <a href="#js_obj">JS Object</a><br>
             </div>
         </div>
         
@@ -911,16 +914,50 @@
                     <h2 id=js_function>JavaScript Functions</h2>
                 </div>
                 <div class="paragraph">
-                    <p>function(ฟังก์ชั่น) คือ ชุดโค้ดที่ถูกเขียนให้อยู่ ภายใต้ชื่อ โดยจะทำงานเมื่อเรียกชื่อๆนั้น เช่น</p>
+                    <p>function(ฟังก์ชั่น) คือ ชุดโค้ดที่ถูกเขียนให้อยู่ ภายใต้ชื่อ โดยจะทำงานเมื่อเรียกชื่อๆนั้น <br>
+                        โดยเหตุผลที่ต้องใช้ฟงัก์ชั่นคือ หากเราต้องการใช้งานการทำงานแบบฟังก์ชั่นหลายๆรอบโดยที่ค่าต่างกัน เราไม่ต้องทำการเขียนใหม่ <br>
+                        แค่ทำการเรียกใช้ฟงัก์ชั่นและใส่ค่า parameter ใหม่เข้าไป <br>
+                        ตัวอย่างเฟัวก์ชั่นเช่น</p>
                         <pre>
                             function myFunction(p1, p2) {
                                 return p1 * p2;   // The function returns the product of p1 and p2
                               }
                         </pre>
                     <h3>Syntax ของ Function</h3>
+                        <p>จะเริ่มจากเรียกใช้ function เพื่อสร้างฟังก์ชั่น และตามด้วยชื่อ ในวงเล็บคือ ค่าท่ีจะใช้ในการคำนวณ และในวงเล็บคือ โค้ดการทำงานของฟังก์ชั่น</p>
+                            <pre>
+                                function name(parameter1, parameter2, parameter3) {
+                                    // code to be executed
+                                  }
+                            </pre>
+                    <h3>Function Invocation</h3>
+                        <p>โค้ดในฟังก์ชั่นจะถูกทำงานเมื่อถูกการเรียกใช้ฟังก์ชั่น เช่น <br>
+                            1.จากการกดปุ่ม คือเกิด event <br>
+                            2.จากการที่ javascript ถูกเรียกใช้ <br>
+                            3.จากตัวมันเอง<br></p>
+                    <h3>Return Function</h3>
+                        <p>เป็นฟังก์ชั่นที่เมื่อเรียกใช้จะทำการส่งค่ากลับมา หลังจากทำงานเสร็จแล้ว เช่น</p>
+                            <pre>
+                                var x = myFunction(4, 3);   // Function is called, return value will end up in x
+                                function myFunction(a, b) {
+                                return a * b;             // Function returns the product of a and b
+                                }
+                            </pre> 
+                    <h3>The () Operator Invokes the Function</h3>  
+                        <p>การเรียกใช้ function เราจะใส่ชื่อฟังก์ชันตามด้วยวงเล็บ () ซึ่งอาจจะมีหรือไม่มี parameter ที่จะส่งค่าไปให้ function</p>
+                            <pre>
+                                function toCelsius(fahrenheit) {
+                                    return (5/9) * (fahrenheit-32);
+                                  }
+                                  document.getElementById("demo").innerHTML = toCelsius;
+                            </pre>
                 </div>
             </div>
-
+            <div class="page">
+                <div class="head">
+                    <h2 id="js_obj">JavaScript Object</h2>
+                </div>
+            </div>
             
         </div>
     </body>
