fixed language and ref breakout

--- a/breakout.html
+++ b/breakout.html
@@ -9,6 +9,7 @@
         </style>
     </head>
     <body>
+    <p>Reference from <a href="https://developer.mozilla.org/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript" target="_blank">Link</a><br>
     <canvas id="myCanvas" width="480" height="320"></canvas>
 
         <script>
