--- a/index.html
+++ b/index.html
@@ -12,33 +12,37 @@
   </head>
 
   <body>
-    <div class="language">
-      <a href="index.html" target="_self">Html</a><br>
-      <a href="javascript.html" target="_self">Java Script</a><br>
-      <a href="breakout.html" target="_blank">Breakout</a><br>
-    </div>
-    <div class="list_container">
-      <p class="contents_title">เนื้อหา</p>
-      <div class="list">
-          <a href="#html_element">Html Elements</a><br>
-          <a href="#html_attribute">Html Attribute</a><br>
-          <a href="#html_heading">Html Heading</a><br>
-          <a href="#html_paragraphs">Html Paragraphs</a><br>
-          <a href="#html_style">Html Styles</a><br>
-          <a href="#html_formatting">Html text Format</a><br>
-          <a href="#html_quotation">Html Quotation </a><br>
-          <a href="#html_comment">Html Comments</a><br>
-          <a href="#html_color">Html Colors</a><br>
-          <a href="#html_css">Html CSS</a><br>
-          <a href="#html_link">Html Link</a><br>
-          <a href="#html_img">Html img</a><br>
+    <div class="leftSide">
+      <div class="language">
+        <a href="index.html" target="_self">Html</a><br>
+        <a href="javascript.html" target="_self">Java Script</a><br>
+        <a href="breakout.html" target="_blank">Breakout</a><br>
+      </div>
+      <div class="list_container">
+        <div class="contents_title">
+          <p>เนื้อหา</p>
+        </div>
+        <div class="list">
+            <a href="#html_element">Html Elements</a><br>
+            <a href="#html_attribute">Html Attribute</a><br>
+            <a href="#html_heading">Html Heading</a><br>
+            <a href="#html_paragraphs">Html Paragraph</a><br>
+            <a href="#html_style">Html Styles</a><br>
+            <a href="#html_formatting">Html text Format</a><br>
+            <a href="#html_quotation">Html Quotation </a><br>
+            <a href="#html_comment">Html Comment</a><br>
+            <a href="#html_color">Html Colors</a><br>
+            <a href="#html_css">Html CSS</a><br>
+            <a href="#html_link">Html Link</a><br>
+            <a href="#html_img">Html img</a><br>
+        </div>
       </div>
     </div>
       <!--Section1-->
     <div class ="content">
       <div class = "page">
         <div class ="head">
-          <h2 id=html_element>ในหัวข้อ &lt; HTML Elements &gt; </h2>
+          <h2 id=html_element>HTML Elements &gt; </h2>
         </div>
           <div class="paragraph">
             <p> คำว่า Elements จะนิยามถึงทุกอย่างที่เริ่มจาก tag เปิดจนถึงปิด โดย มี tag <br>
