--- a/html.html
+++ b/html.html
@@ -14,9 +14,9 @@
   <body>
     <div class="leftSide">
       <div class="language">
-        <a href="index.html" target="_self">Html</a><br>
+        <a href="html.html" target="_self">Html</a><br>
         <a href="javascript.html" target="_self">Java Script</a><br>
-        <a href="breakout.html" target="_blank">Breakout</a><br>
+        <a href="Breakout2DGame/index.html" target="_blank">Breakout</a><br>
       </div>
       <div class="list_container">
         <div class="contents_title">
