--- a/html.html
+++ b/html.html
@@ -42,7 +42,7 @@
     <div class ="content">
       <div class = "page">
         <div class ="head">
-          <h2 id=html_element>HTML Elements &gt; </h2>
+          <h2 id=html_element>HTML Elements</h2>
         </div>
           <div class="paragraph">
             <p> คำว่า Elements จะนิยามถึงทุกอย่างที่เริ่มจาก tag เปิดจนถึงปิด โดย มี tag <br>
