remove waste css file

--- a/Breakout2DGame/index.html
+++ b/Breakout2DGame/index.html
@@ -3,7 +3,7 @@
         <title>2D Game</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@600&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
         <div class="heading">
             <h1 style="text-align:center;"> Breakout 2D Game </h1>
             <p>ตัวผู้เขียนทำการศึกษาการเขียนเกมที่ใช้ภาษา JavaScript ผ่านเว็บไซต์นี้ <a href="https://developer.mozilla.org/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript" 
