--- a/html.html
+++ b/html.html
@@ -17,7 +17,7 @@
         <a href="html.html" target="_self">Html</a><br>
         <a href="javascript.html" target="_self">Java Script</a><br>
         <a href="Breakout2DGame/index.html" target="_blank">Breakout</a><br>
-        <a href="\\Breakout2DGame\index_Class_Bk.html" target="_blank">Breakout Class</a><br>
+        <a href="Breakout2DGame/index_Class_Bk.html" target="_blank">Breakout Class</a><br>
       </div>
       <div class="list_container">
         <div class="contents_title">
