edit iframe that refused to youtube

--- a/Breakout2DGame/index_Class_Bk.html
+++ b/Breakout2DGame/index_Class_Bk.html
@@ -16,7 +16,7 @@
             <div class="paragraph">
                <!-- <h3>สามารถเล่นตัวเกม ได้ที่<a href="mainGame.html" target="_blank"> Enter </a></h3>-->
                 <p>และได้ทำการทำวิดีโอเพื่ออธิบายความคืบหน้า และปัญหาที่เจอ ในการสร้างเกม  ดังนี้<br>
-                    <iframe src="https://youtu.be/wJWy6NUYx1A" height="500" width="1000" ></iframe>
+                    <iframe src="https://www.youtube.com/embed/wJWy6NUYx1A" height="500" width="1000" ></iframe>
                 </p>
             </div>s
         </div>s
