add 2nd breakout Report VDO

--- a/Breakout2DGame/index_Class_Bk.html
+++ b/Breakout2DGame/index_Class_Bk.html
@@ -15,10 +15,11 @@
         <div class="content">
             <div class="paragraph">
                <!-- <h3>สามารถเล่นตัวเกม ได้ที่<a href="mainGame.html" target="_blank"> Enter </a></h3>-->
-                <p>และได้ทำการทำวิดีโอเพื่ออธิบายความคืบหน้า และปัญหาที่เจอ ในการสร้างเกม  ดังนี้<br>
+                <p>และได้ทำการทำวิดีโอเพื่ออธิบายความคืบหน้า และปัญหาที่เจอ ในการสร้างเกม  ดังนี้</p><br>
                     <iframe src="https://www.youtube.com/embed/wJWy6NUYx1A" height="500" width="1000" ></iframe>
-                </p>
-            </div>s
-        </div>s
+                <p>จากปัญหาที่เจอในคลิปแรกตอนนี้สามารถแก้ไขได้เรียบร้อย และทำการเพิ่มฟังก์ชั่นเข้าไป เพิ่ม</p>
+                    <iframe src="https://www.youtube.com/embed/C4T4VSNv-Kw" height="500" width="1000"></iframe>
+            </div>
+        </div>
     </body>
 </html>
