--- a/Breakout2DGame/index_Class_Bk.html
+++ b/Breakout2DGame/index_Class_Bk.html
@@ -18,7 +18,7 @@
                 <p>และได้ทำการทำวิดีโอเพื่ออธิบายความคืบหน้า และปัญหาที่เจอ ในการสร้างเกม  ดังนี้</p><br>
                     <iframe src="https://www.youtube.com/embed/wJWy6NUYx1A" height="500" width="1000" ></iframe>
                 <p>จากปัญหาที่เจอในคลิปแรกตอนนี้สามารถแก้ไขได้เรียบร้อย และทำการเพิ่มฟังก์ชั่นเข้าไป เพิ่ม</p>
-                    <iframe src="https://www.youtube.com/embed/C4T4VSNv-Kw" height="500" width="1000"></iframe>
+                    <iframe src="https://www.youtube.com/embed/Wd-eVaNiWGI" height="500" width="1000"></iframe>
             </div>
         </div>
     </body>
